v1.11.x/connectors/database/burstiq/yaml.mdx
---
title: Run the BurstIQ Connector Externally
description: Use YAML to configure BurstIQ LifeGraph ingestion, enabling structured metadata extraction for healthcare data platforms.
slug: /connectors/database/burstiq/yaml
sidebarTitle: Run Externally
mode: "wide"
---

import { ConnectorDetailsHeader } from '/snippets/components/ConnectorDetailsHeader/ConnectorDetailsHeader.jsx'
import { CodePreview, ContentPanel, ContentSection, CodePanel } from '/snippets/components/CodePreview.jsx'
import IngestionSinkDef from '/snippets/connectors/yaml/ingestion-sink-def.mdx'
import WorkflowConfigDef from '/snippets/connectors/yaml/workflow-config-def.mdx'
import IngestionCli from '/snippets/connectors/yaml/ingestion-cli.mdx'
import PythonRequirements from '/snippets/connectors/python-requirements.mdx'
import ExternalIngestionDeployment from '/snippets/v1.11.x/connectors/external-ingestion-deployment.mdx'
import IngestionSink from '/snippets/connectors/yaml/ingestion-sink.mdx'
import WorkflowConfig from '/snippets/connectors/yaml/workflow-config.mdx'
import SourceConfigDef from '/snippets/connectors/yaml/database/source-config-def.mdx'
import SourceConfig from '/snippets/connectors/yaml/database/source-config.mdx'
import Lineage from '/snippets/connectors/yaml/lineage.mdx'

<ConnectorDetailsHeader
  icon='/public/images/connectors/burstiq.webp'
  name="BurstIQ"
  stage="BETA"
  availableFeatures={["Metadata", "Lineage", "Column-level Lineage"]}
  unavailableFeatures={["Query Usage", "Owners", "Tags", "Stored Procedures", "Data Profiler", "Data Quality"]}
/>

In this section, we provide guides and references to use the BurstIQ LifeGraph connector.

Configure and schedule BurstIQ metadata and profiler workflows from the OpenMetadata UI:

- [Requirements](#requirements)
- [Metadata Ingestion](#metadata-ingestion)
- [Lineage](#lineage)

<ExternalIngestionDeployment />

## Requirements

### Python Requirements

<PythonRequirements />

To run the BurstIQ ingestion, you will need to install:

```bash
pip3 install "openmetadata-ingestion[burstiq]"
```

## Metadata Ingestion

All connectors are defined as JSON Schemas.
[Here](https://github.com/open-metadata/OpenMetadata/blob/main/openmetadata-spec/src/main/resources/json/schema/entity/services/connections/database/burstIQConnection.json)
you can find the structure to create a connection to BurstIQ.

In order to create and run a Metadata Ingestion workflow, we will follow
the steps to create a YAML configuration able to connect to the source,
process the Entities if needed, and reach the OpenMetadata server.

The workflow is modeled around the following
[JSON Schema](https://github.com/open-metadata/OpenMetadata/blob/main/openmetadata-spec/src/main/resources/json/schema/metadataIngestion/workflow.json)

### 1. Define the YAML Config

This is a sample config for BurstIQ:

<CodePreview>
  <ContentPanel>
    <ContentSection id={1} title="Source Configuration" lines="1-3">
      Configure the source type and service name for your BurstIQ connector.
    </ContentSection>

    <ContentSection id={2} title="Username" lines="7">
      **username**: Username to connect to BurstIQ. This user should have privileges to read all the metadata in BurstIQ LifeGraph.
    </ContentSection>

    <ContentSection id={3} title="Password" lines="8">
      **password**: Password to connect to BurstIQ.
    </ContentSection>

    <ContentSection id={4} title="Realm Name" lines="9">
      **realmName**: BurstIQ Keycloak realm name (e.g., 'ems' from https://auth.burstiq.com/realms/ems). This identifies your organization's authentication realm in the Keycloak identity and access management system.
    </ContentSection>

    <ContentSection id={5} title="Table Filter Pattern" lines="12-16">
      **tableFilterPattern** (Optional): Regex to only include/exclude dictionaries (tables) that match the pattern.

      Configure patterns to include or exclude specific dictionaries based on naming conventions. BurstIQ uses the term "dictionaries" for data structures similar to tables in traditional databases.
    </ContentSection>

    <ContentSection id={6} title="Source Config" lines="17-60">
      <SourceConfigDef />
    </ContentSection>

    <ContentSection id={7} title="Sink Configuration" lines="61-63">
      <IngestionSinkDef />
    </ContentSection>

    <ContentSection id={8} title="Workflow Configuration" lines="64-80">
      <WorkflowConfigDef />
    </ContentSection>
  </ContentPanel>

  <CodePanel fileName="burstiq_config.yaml">
```yaml
source:
  type: burstiq
  serviceName: local_burstiq
  serviceConnection:
    config:
      type: BurstIQ
      username: your_username
      password: your_password
      realmName: ems
      biqSdzName: burstiq_secure_data_zone_name
      biqCustomerName: burstiq_customer_name
      # tableFilterPattern:
      #   includes:
      #     - patient.*
      #   excludes:
      #     - test.*
```
<SourceConfig />
<IngestionSink />
<WorkflowConfig />
</CodePanel>
</CodePreview>

<IngestionCli />

<Lineage connector="burstiq" />
